--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
