--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-virtuoso": "^4.18.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
