--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-virtuoso": "^4.18.1",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
